03. JSX과 Babel , JSX 다루기

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>02. DOM 다루기 Element 생성하기</title>
+    <title>React-Basic</title>
     <script
       crossorigin
       src="https://unpkg.com/react@17/umd/react.development.js"
@@ -13,18 +13,25 @@
       crossorigin
       src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
     ></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
-    <script>
+    <script type="text/babel">
       const rootElement = document.getElementById("root");
-      const elementV = document.createElement("h1");
-      const element = React.createElement("h1", { children: "Hello, world!" });
-      // element.textContent = "Hello, world!";
-      // console.log(elementV);
-      console.log(element);
+
+      const text = "Hello, world!";
+      const titleClassName = "title123";
+
+      const props = { className: titleClassName, children: text };
+      // const customH1 = <h1 {...props} />;
+      const customH1 = (
+        <h1 className={props.className} children={props.children} />
+      );
+      const element = customH1;
+
+      // const element = <h1 className={titleClassName}>{text}</h1>;
       ReactDOM.render(element, rootElement);
-      // rootElement.appendChild(element);
     </script>
   </body>
 </html>
