04. 멀티 Element 생성하기

--- a/index.html
+++ b/index.html
@@ -20,17 +20,32 @@
     <script type="text/babel">
       const rootElement = document.getElementById("root");
 
-      const text = "Hello, world!";
-      const titleClassName = "title123";
+      // ** element 생성하기 **
+      // const text = "Hello, world!";
+      // const titleClassName = "title123";
 
-      const props = { className: titleClassName, children: text };
-      // const customH1 = <h1 {...props} />;
-      const customH1 = (
-        <h1 className={props.className} children={props.children} />
-      );
-      const element = customH1;
+      // const props = { className: titleClassName, children: text };
+      // // const customH1 = <h1 {...props} />;
+      // const customH1 = (
+      //   <h1 className={props.className} children={props.children} />
+      // );
+      // const element = customH1;
 
       // const element = <h1 className={titleClassName}>{text}</h1>;
+
+      // ** 멀티 element 생성하기 **
+      const element = (
+        // React.Fragment - 부모로 묶어주는 역할(자식 그룹화) <></>이렇게 생략가능
+        // <React.Fragment
+        //   children={[<h1>Hi</h1>, <h3>Bye</h3>, <h5>Children</h5>]}
+        // />
+        <React.Fragment>
+          <h1>Hi</h1>
+          <h3>Bye</h3>
+          <h5>Children</h5>
+        </React.Fragment>
+      );
+
       ReactDOM.render(element, rootElement);
     </script>
   </body>
