--- a/React-Basic08~12.html
+++ b/React-Basic08~12.html
@@ -31,7 +31,7 @@
         const number = Math.floor(Math.random() * (10 - 1) + 1);
         const element = (
           <>
-            <button>{number}</button>
+            <button children={number} />
             <div>
               <p>{number}</p>
             </div>
