--- a/React-Basic10~12.html
+++ b/React-Basic10~12.html
@@ -14,15 +14,40 @@
     <script type="text/babel">
       const rootElement = document.getElementById("root");
 
-      const handleClick = () => alert("pressed");
-      const element = (
-        <>
-          <button onClick={handleClick} onMouseOut={() => alert("Bye")}>
-            Press
-          </button>
-        </>
-      );
-      ReactDOM.render(element, rootElement);
+      const state = { keyword: "", typing: false, result: "" };
+
+      const App = () => {
+        function handleChange(event) {
+          setState({ keyword: event.target.value, typing: true });
+        }
+
+        function handleClick() {
+          setState({
+            typing: false,
+            result: `We find results of ${state.keyword}`
+          });
+        }
+        return (
+          <>
+            <input onChange={handleChange} />
+            <button onClick={handleClick}>search</button>
+            <p>
+              {state.typing ? `Looking for ${state.keyword}...` : state.result}
+            </p>
+          </>
+        );
+      };
+
+      function setState(newState) {
+        Object.assign(state, newState);
+        render();
+      }
+
+      function render() {
+        ReactDOM.render(<App />, rootElement);
+      }
+
+      render();
     </script>
   </body>
 </html>
