--- a/React-Basic10~12.html
+++ b/React-Basic10~12.html
@@ -14,40 +14,31 @@
     <script type="text/babel">
       const rootElement = document.getElementById("root");
 
-      const state = { keyword: "", typing: false, result: "" };
-
       const App = () => {
+        const [keyword, setKeyword] = React.useState("");
+        const [result, setResult] = React.useState("");
+        const [typing, setTyping] = React.useState(false);
+
         function handleChange(event) {
-          setState({ keyword: event.target.value, typing: true });
+          setKeyword(event.target.value);
+          setTyping(true);
         }
 
         function handleClick() {
-          setState({
-            typing: false,
-            result: `We find results of ${state.keyword}`
-          });
+          setTyping(false);
+          setResult(`We find results of "${keyword}"`);
         }
+
         return (
           <>
             <input onChange={handleChange} />
             <button onClick={handleClick}>search</button>
-            <p>
-              {state.typing ? `Looking for ${state.keyword}...` : state.result}
-            </p>
+            <p>{typing ? `Looking for ${keyword}...` : result}</p>
           </>
         );
       };
 
-      function setState(newState) {
-        Object.assign(state, newState);
-        render();
-      }
-
-      function render() {
-        ReactDOM.render(<App />, rootElement);
-      }
-
-      render();
+      ReactDOM.render(<App />, rootElement);
     </script>
   </body>
 </html>
