--- a/React-Basic10~12.html
+++ b/React-Basic10~12.html
@@ -15,9 +15,22 @@
       const rootElement = document.getElementById("root");
 
       const App = () => {
-        const [keyword, setKeyword] = React.useState("");
+        const [keyword, setKeyword] = React.useState(() => {
+          console.log("initialize");
+
+          return window.localStorage.getItem("keyword");
+        });
         const [result, setResult] = React.useState("");
         const [typing, setTyping] = React.useState(false);
+
+        console.log("render");
+
+        // 키워드 값이 바뀔때마다 부수적으로 스토리지에 값을 저장하고 싶다.
+        // React.useEffect(() => {함수}, [effect를 이루어주고 싶은 대상, 생략가능])
+        React.useEffect(() => {
+          console.log("effect");
+          window.localStorage.setItem("keyword", keyword);
+        }, [keyword, typing]);
 
         function handleChange(event) {
           setKeyword(event.target.value);
@@ -31,7 +44,7 @@
 
         return (
           <>
-            <input onChange={handleChange} />
+            <input onChange={handleChange} value={keyword} />
             <button onClick={handleClick}>search</button>
             <p>{typing ? `Looking for ${keyword}...` : result}</p>
           </>
