--- a/React-Basic16~19.html
+++ b/React-Basic16~19.html
@@ -14,6 +14,49 @@
     <script type="text/babel">
       const rootElement = document.getElementById("root");
 
+      // 17. Hookflow 이해하기 2 (App - Child)
+      const Child = () => {
+        console.log("   Child render start");
+        // useState
+        const [text, setText] = React.useState(() => {
+          console.log("   Child useState");
+          return "";
+        });
+
+        // useEffect
+        React.useEffect(() => {
+          console.log("   Child useEffect, no deps");
+          return () => {
+            console.log("   Child useEffect [Cleanup], no deps");
+          };
+        });
+        React.useEffect(() => {
+          console.log("   Child useEffect, empty deps");
+          return () => {
+            console.log("   Child useEffect [Cleanup], empty deps");
+          };
+        }, []);
+        React.useEffect(() => {
+          console.log("   Child useEffect, [text]");
+          return () => {
+            console.log("   Child useEffect [Cleanup], [text]");
+          };
+        }, [text]);
+
+        function handleChange(event) {
+          setText(event.target.value);
+        }
+
+        const element = (
+          <>
+            <input onChange={handleChange} />
+            <p>{text}</p>
+          </>
+        );
+        console.log("   Child render end");
+        return element;
+      };
+
       // 16. Hookflow 이해하기 (App - Child)
       const App = () => {
         console.log("APP render start");
@@ -33,29 +76,34 @@
         // render가 끝난 다음에 useEffect 동작
         React.useEffect(() => {
           console.log("APP useEffect, no deps"); // 모든 것에 반응
+          return () => {
+            console.log("APP useEffect [Cleanup], no deps");
+          };
         });
         React.useEffect(() => {
           console.log("APP useEffect, empty deps"); // 처음 렌더될 때만 반응
+          return () => {
+            console.log("APP useEffect [Cleanup], empty deps");
+          };
         }, []);
         React.useEffect(() => {
-          console.log("APP useEffect, show deps"); // deps값이 바뀔 때만 반응
+          console.log("APP useEffect, [show]"); // deps값이 바뀔 때만 반응
+          return () => {
+            console.log("APP useEffect [Cleanup], [show]");
+          };
         }, [show]);
+
+        console.log("APP render end");
 
         return (
           <>
             <button onClick={handleClick}>search</button>
-            {show ? (
-              <>
-                <input />
-                <p></p>
-              </>
-            ) : null}
+            {show ? <Child /> : null}
           </>
         );
       };
 
       ReactDOM.render(<App />, rootElement);
-      console.log("APP render end");
     </script>
   </body>
 </html>
