React 19-24 강의 정리

--- a/React-Basic19.html
+++ b/React-Basic19.html
@@ -54,6 +54,7 @@
 
       const element = (
         <>
+          <h1>리액트 Element에 스타일 입히기</h1>
           <Button style={{ borderRadius: "50%" }}>Green</Button>
           <Button color="blue" style={{ borderRadius: 8 }}>
             Blue
