--- a/index.html
+++ b/index.html
@@ -16,8 +16,25 @@
       <li><a href="React-Basic19.html">React-Basic16~19</a></li>
       <li>
         <a href="React-Basic20.html">React-Basic20 Ref로 Dom 다루기 (useRef)</a>
+      </li>
+      <li>
         <a href="React-Basic21-22.html">React-Basic21-22 Form 다루기</a>
-        <a href="React-Basic23.html">React-Basic23 Error 다루기</a>
+      </li>
+      <li><a href="React-Basic23.html">React-Basic23 Error 다루기</a></li>
+      <li>
+        <a href="React-Basic25-26.html"
+          >React-Basic25-26 Key와 리렌더링 알아보기</a
+        >
+      </li>
+      <li>
+        <a href="React-Basic27.html"
+          >React-Basic27 상태 끌어올리기 (State lifting up)</a
+        >
+      </li>
+      <li>
+        <a href="React-Basic28.html"
+          >React-Basic28 데이터 Fetch 해보기 (API Call)</a
+        >
       </li>
     </ol>
   </body>
